# lab13-sprint-full-stack-slop-llc

./: .gitignore
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
.venv1/: pyvenv.cfg
calendar_app/: .coverage  .gitignore  README.md  credentials.json  pyproject.toml
calendar_app/.github/: bugReportIssueTemplate  featureRequestTemplate
calendar_app/UML/: README.md
calendar_app/src/calendar_app_package/: calendar_api.py  main.py  requirements.txt
calendar_app/src/example_package_Higgs.egg-info/: SOURCES.txt
calendar_app/tests/: test_calendar_api.py  test_main.py
calendar_app_package/: .gitignore  pyproject.toml
calendar_app_package/tests/: test_example.py
packaging_tutorial/: pyproject.toml
packaging_tutorial/.venv2/: pyvenv.cfg
packaging_tutorial/src/example_package_Higgs/: main.py
packaging_tutorial/src/example_package_Higgs.egg-info/: PKG-INFO
